# bayes_spec

./: .gitattributes  .readthedocs.yaml  Dockerfile  LICENSE  README.md  codemeta.json  environment-cuda-dev.yml  environment-cuda.yml  environment-dev.yml  environment.yml  paper.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: paper.yml  publish.yml  tests.yml
bayes_spec/: __init__.py  _version.py  base_model.py  cluster_posterior.py  nuts.py  optimize.py  plots.py  spec_data.py  utils.py
bayes_spec/models/: __init__.py  gauss_line.py  gauss_line_noise.py  gauss_line_noise_ordered.py  gauss_model.py  gauss_noise_model.py
docs/: requirements.txt
docs/source/: bayes_spec.models.rst  bayes_spec.rst  conf.py  index.rst  models.rst  modules.rst  tips.rst
docs/source/notebooks/: basic_tutorial.ipynb  basic_tutorial_noise.ipynb  optimization.ipynb  other_samplers.ipynb
examples/: basic_tutorial.ipynb  basic_tutorial_noise.ipynb  optimization.ipynb
examples/figures/: model.gv  model_noise.gv
paper/: paper.bib  paper.md
tests/: test_base_model.py  test_gauss_models.py  test_optimize.py  test_plots.py  test_spec_data.py  test_utils.py
